ai foundry deplyment

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "@azure-rest/ai-inference": "latest",
     "@azure/core-auth": "latest",
-    "@azure/core-sse": "latest"
+    "@azure/core-sse": "latest",
+    "dotenv": "^17.2.1",
+    "openai": "^5.10.2"
   }
 }
